--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 
     <context-param>
         <param-name>invertedIndexServer</param-name>
-        <param-value>http://localhost</param-value>
+        <param-value>127.0.0.1</param-value>
     </context-param>
 
     <context-param>
